# FollowMeTask_IranOpen2014_AtHomeRobot

./: CMakeLists.txt  README.md  package.xml
include/libopentld/imacq/: ImAcq.h
launch/: find_me.launch
src/: BoostTest.cpp  Config.cpp  Config.h  FindMe.cpp  FindMe.h  OpenTLD.cpp  Settings.cpp  bayad dorost beshe  find_me_logic.cpp  find_me_logic.h  find_me_party_logic.cpp  opentld_test_node.cpp
src/libopentld/imacq/: ImAcq.cpp
src/libopentld/mftracker/: BB.cpp  BBPredict.cpp  FBTrack.cpp  Lk.cpp  Median.cpp
src/libopentld/tld/: Clustering.cpp  DetectionResult.cpp  DetectorCascade.cpp  EnsembleClassifier.cpp  ForegroundDetector.cpp  MedianFlowTracker.cpp  NNClassifier.cpp  TLD.cpp  TLDUtil.cpp  VarianceFilter.cpp
